[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://scripts/ui/connect_ui.gd" id="1"]

[node name="Main" type="Node"]

[node name="ConnectUI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1")

[node name="VBox" type="VBoxContainer" parent="ConnectUI"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.3
anchor_top = 0.2
anchor_right = 0.7
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 10

[node name="Title" type="Label" parent="ConnectUI/VBox"]
layout_mode = 2
text = "Munchie Quest"
horizontal_alignment = 1

[node name="NameInput" type="LineEdit" parent="ConnectUI/VBox"]
layout_mode = 2
text = "Player"
placeholder_text = "Enter your name..."

[node name="IPInput" type="LineEdit" parent="ConnectUI/VBox"]
layout_mode = 2
text = "207.32.216.76"
placeholder_text = "Server IP (207.32.216.76)"

[node name="JoinButton" type="Button" parent="ConnectUI/VBox"]
layout_mode = 2
text = "Join Game"

[node name="StatusLabel" type="Label" parent="ConnectUI/VBox"]
layout_mode = 2
text = "Not connected"
horizontal_alignment = 1
